# diveboard-gtk

./: .gitignore  COPYING  README.md  meson.build  xyz.slothlife.diveboard.json
build-aux/meson/: postinstall.py
builddir/: .ninja_deps  .ninja_log  build.ninja  compile_commands.json
builddir/data/: xyz.slothlife.diveboard.appdata.xml
builddir/meson-info/: intro-buildoptions.json  intro-buildsystem_files.json  intro-installed.json  intro-projectinfo.json  intro-targets.json  intro-tests.json  meson-info.json
builddir/meson-logs/: install-log.txt  meson-log.txt
builddir/src/: diveboard
builddir/src/ui/: diveboard.gresource
data/: meson.build  xyz.slothlife.diveboard.appdata.xml.in  xyz.slothlife.diveboard.desktop.in  xyz.slothlife.diveboard.gschema.xml
data/icons/: meson.build
po/: POTFILES  meson.build
src/: api_manager.py  database_manager.py  define.py  dive.py  dive_detail.py  dive_trip.py  diveboard.in  logbook.py  login.py  main.py  map.py  meson.build  picture.py  preferences.py  settings.py  spot.py  statistics.py  utils.py  wallet.py  window.py
src/ui/: about.ui  dive_detail.ui  dive_overview.ui  dive_trip.ui  diveboard.gresource.xml  logbook.ui  login.ui  map.ui  meson.build  preferences.ui  statistics.ui  wallet.ui  window.ui
src/ui/css/: style.css
